# Claude

./: .gitignore
.github/workflows/: main.yml
ajio-avasa-alert/: .gitignore  README.md  deals.txt  pyproject.toml  requirements-dev.txt  scraper.py
ajio-avasa-alert/.github/workflows/: lint.yml  scraper.yml
ajio-avasa-alert/tests/: test_scraper.py
