[project]
name = "ajio-avasa-alert"
version = "0.1.0"
description = "AJIO AVAASA brand deal scraper with Telegram notifications"
requires-python = ">=3.12"
dependencies = [
    "playwright==1.44.0",
    "requests==2.31.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
    "pytest>=8.2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
